# agent-os

./: .gitignore  AGENTS.md  DAILY_ROUTINE_CODEX_BRIEF.md  MIGRATION_PLAN.md  NOTION_ADAPTER_CODEX_BRIEF.md  OPENCLAW_BRIDGE_WIRING.md  OPENCLAW_DAILY_ROUTINE_WIRING_BRIEF.md  PHASE_1_CHECKLIST.md  PHASE_1_IMPLEMENTATION.md  README.md  ROUTINE_TASK_SUPPORT_BRIEF.md  SKILL.md  SYSTEM_SPEC.md  WEEK5_CODEX_BRIEF.md  agentic_os.config.example.json  agentic_os.config.json  conftest.py  policy_rules.json  pyproject.toml
cron/: jobs.json
examples/: daily_routine_sample.json  openclaw_daily_routine_bridge_input.json
scripts/: backfill_approved_lifecycle_drift.py  healthcheck.py  openclaw_calendar_bridge.py  openclaw_daily_routine_bridge.py  openclaw_daily_routine_runner.py  openclaw_notion_sync_bridge.py  openclaw_task_probe_bridge.py  reauth_google.py  register_discord_commands.py  reset_db.py
src/: __init__.py
src/agentic_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
tests/: test_api_paperclip_diagnostics.py  test_approval_notifier.py  test_backend_auth.py  test_dispatcher.py  test_e2e_plan_first_flow.py  test_email_approval_parser.py  test_email_draft_handler.py  test_execution_receiver.py  test_github_contribution_lifecycle.py  test_gmail_poller.py  test_gmail_sender.py  test_gmail_task_creator.py  test_idempotency.py  test_intake_classifier.py  test_notification_router.py  test_notion_sync_bridge.py  test_openclaw_bridge.py  test_paperclip_reconciler.py  test_phase7_recovery_health.py  test_runtime_followups.py  test_state_sync_contract.py  test_submit_helpers.py
(+66 files in other folders)
