[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-os"
version = "0.1.0"
description = "Week 4 OpenClaw-first backend for durable task, approval, execution, artifact, and audit operations"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42,<47",
    "fastapi>=0.115,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn>=0.30,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
agentic_os = ["templates/*.html", "static/*"]

[tool.setuptools.packages.find]
where = ["src"]
